--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "search",
       "channel",
       "index",
-      "inline"
+      "inline",
+      "song-download"
     ],
     "website": "https://github.com/Masterrockiei/EvaMaria",
     "repository": "https://github.com/Masterrockiei/EvaMaria",
