--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,11 @@ pymongo[srv]==3.11.4
 motor==2.4.0
 marshmallow==3.12.2
 umongo==3.0.0
+aiofiles
 requests
 bs4
 imdbpy
+youtube-search-python==1.4.6
+youtube_search
+youtube-dl
+yt-dlp
