--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ motor==2.4.0
 marshmallow==3.12.2
 umongo==3.0.0
 asyncio==3.4.3
+py-Ultroid==2022.3.20
+pytgcalls==3.0.0.dev21
 aiohttp==3.7.4
 aiofiles
 requests
